# Latest

./: .gitignore  Makefile  app.py  client.py  local.env  proto_generate.py  pyproject.toml
config/: config.py
makefiles/: compile_proto.py  project.mk  proto.mk
model_manager/proto/: model_schema.proto  model_schema_pb2.py
model_manager/servicer_handlers/: servicer_handler.py
model_manager/servicers/: adapter_sklearn.py  main.py  servicer.py
model_manager/store/export_models/: Exported_LogisticRegressionModel.pkl.pkl  Exported_XGBmodel-numeric.pkl.pkl  LogisticRegressionModel.joblib
model_manager/store/import_models/: LogisticRegressionModel.textproto  proto_model.textproto
model_manager/store/models/: LogisticRegressionModel.pkl  XGBmodel-numeric.pkl  network_model_card.pkl  weka_logistic_regression.model
model_manager/utils/: base_utils.py  model_store_utils.py
model_manager/utils/services/Adapter/: adapter.py  adapter_sklearn.py  adapter_weka.py
model_manager/utils/services/adapter/: adapter.py  adapter_sklearn.py  adapter_weka.py
model_manager/utils/wrappers/: connection_handler.py
