[tool.poetry]
name = "model-manager"
version = "0.1.0"
description = ""
authors = ["PRAMOD KUMAR <pramod.kumar@statusneo.com>"]
readme = "README.md"
packages = [{include = "model_manager"}]

[[tool.poetry.source]]
name = "azure_artifacts"
url = "https://pkgs.dev.azure.com/relianceJio/RelianceJio/_packaging/telos/pypi/simple/"
secondary = true

[tool.poetry.group.base.dependencies]  # base dependency group
scikit-learn="==1.0.2"

[tool.poetry.dependencies]  # main dependency group
python = "^3.9"
flake8 = "==6.0.0"
artifacts-keyring = "==0.3.2"
keyring = "==23.13.1"
setuptools = "==67.0.0"
wheel = "==0.38.4"
protobuf = "==4.21.12"
telos-proto = { version = "1.1.7", source = "azure_artifacts" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
